dto. attachment image. history of messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ jwt.token.secret=jekijekijekijekijekijekijekijekijekijekijekijeki
 jwt.token.expired=360000
 
 Access-Control-Allow-Origin: https://localhost:3000
+
+folderForImages=/images
+
+# spring.jpa.hibernate.hbm2ddl.auto=update
+# spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
